src/test/resources/validation/error/queryWithSelfReferenceMissingSplitQuery/schema.graphqls
type Film @table {
  id: ID!
  sequel: Film
}

type Query {
  films: [Film]
}

